# Phyo_Portfolio_Webpage

./: Career.h
gis_chatbot_cpp/: CMakeLists.txt  README.md
gis_chatbot_cpp/src/: ad_generator.cpp  ad_generator.hpp  knowledge.cpp  knowledge.hpp  main.cpp  nlp.cpp  nlp.hpp  util.cpp  util.hpp
portfolio/: README.md  content.js  index.html  main.js  manifest.webmanifest  styles.css  sw.js
portfolio/assets/art/burmese/: manifest.json
portfolio/assets/art/cyber/: manifest.json  premium_photo-1678937611282-d502f722c190.avif
portfolio/assets/art/masters/: masters.json
portfolio/assets/fonts/bpo/: info.txt
portfolio/assets/fonts/material-theories/: info.txt
portfolio/assets/fonts/material-theories/misc/: 177Studio-License.txt
portfolio/assets/fonts/reyda/: info.txt
portfolio/assets/fonts/reyda/misc/: Readme.txt
portfolio/assets/fonts/trench/: info.txt
portfolio/assets/recreation/: aquarium-underwater-1.avif
portfolio/scripts/: dedupe_masters.py  fetch_masters.py  fetch_met_more.py  fetch_more_masters.py
